[gd_scene load_steps=24 format=3 uid="uid://cfdm0yxtth8hi"]

[ext_resource type="TileSet" uid="uid://bx81x6wic66tw" path="res://Art/World_Tiles.tres" id="1"]
[ext_resource type="Script" uid="uid://c7rfn1rnhk1u0" path="res://World.gd" id="2"]
[ext_resource type="Resource" uid="uid://dr0l2wmx6w0kk" path="res://Minerals/Copper.tres" id="3"]
[ext_resource type="Resource" uid="uid://dcd65qqf4hkoy" path="res://Minerals/Lava.tres" id="4"]
[ext_resource type="Resource" uid="uid://cfhq2or6bqil8" path="res://Minerals/Debris.tres" id="5"]
[ext_resource type="Resource" uid="uid://8esukgvf2cpi" path="res://Minerals/Jasminium.tres" id="6"]
[ext_resource type="Resource" uid="uid://cfghycax3o2p6" path="res://Minerals/Rock.tres" id="7"]
[ext_resource type="Resource" uid="uid://dc2g8mkvwjhy2" path="res://Minerals/Silver.tres" id="8"]
[ext_resource type="Resource" uid="uid://d2gu0pgj25u0n" path="res://Minerals/Gold.tres" id="9"]
[ext_resource type="Resource" uid="uid://cd4xjqsxbagjd" path="res://Minerals/Iron.tres" id="10"]
[ext_resource type="Resource" uid="uid://cbkyeqtd41udf" path="res://Minerals/Radinium.tres" id="11"]
[ext_resource type="Resource" uid="uid://wl0617lp6k4y" path="res://Minerals/Platinum.tres" id="12"]
[ext_resource type="Resource" uid="uid://go3oah6snpgh" path="res://Minerals/Lavendarnium.tres" id="13"]
[ext_resource type="Resource" uid="uid://brrpts7deqpt5" path="res://Minerals/Uranium.tres" id="14"]
[ext_resource type="AudioStream" uid="uid://c7or3a06a8csd" path="res://Sounds/Motherload.ogg" id="15"]
[ext_resource type="Script" uid="uid://qanmkdmq5q6n" path="res://Game.gd" id="16"]
[ext_resource type="PackedScene" uid="uid://b1b8yvc74eyqm" path="res://Player.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://c70s343tbytjy" path="res://Overlay.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://cgaj4843nlxfl" path="res://Store.tscn" id="20"]
[ext_resource type="Texture2D" uid="uid://6yd1s1dwffsb" path="res://Art/Lava.png" id="21"]

[sub_resource type="FastNoiseLite" id="1"]
seed = 123456
frequency = 0.4

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6a6hi"]
texture = ExtResource("21")
texture_region_size = Vector2i(256, 256)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -128, 128, -128, -128, 128, -128)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, 128, 128, 128, -128, -128, -128)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, -128, -128, -128, 128, 128, 128)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, 128, -128, -128, -128, -128, 128)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -128, 128, -128, 128, 128)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 128, -128, 128, -128, -128)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, -128, 128, 128, 128, 128, -128)

[sub_resource type="TileSet" id="10"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6a6hi")

[node name="Game" type="Node2D"]
script = ExtResource("16")

[node name="Overlay" parent="." instance=ExtResource("18")]

[node name="World" type="Node2D" parent="."]
scale = Vector2(0.25, 0.25)
script = ExtResource("2")
world_size = Vector2(50, 500)
scroll_speed = 500
noise = SubResource("1")
cave_threshold = 0.843
mineral_rates = [null, null, ExtResource("3"), ExtResource("10"), ExtResource("8"), ExtResource("9"), ExtResource("12"), ExtResource("14"), ExtResource("11"), ExtResource("13"), ExtResource("6"), ExtResource("7"), ExtResource("4"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5")]

[node name="LoadingCamera" type="Camera2D" parent="World"]
position = Vector2(3200, 4128)
scale = Vector2(4, 4)

[node name="Dirt" type="TileMap" parent="World"]
position = Vector2(0, 1024)
tile_set = ExtResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(4128872, 196608, 3, 4063336, 458752, 3, 3997800, 458752, 3, 3932264, 458752, 3, 3866728, 458752, 3, 3801192, 458752, 3, 3735656, 458752, 3, 3670120, 458752, 3, 3604584, 458752, 3, 3539048, 458752, 3, 3473512, 458752, 3, 3407976, 458752, 3, 3342440, 458752, 3, 3276904, 458752, 3, 3211368, 458752, 3, 3145832, 458752, 3, 3080296, 458752, 3, 3014760, 458752, 3, 2949224, 458752, 3, 2883688, 458752, 3, 2818152, 458752, 3, 2752616, 458752, 3, 2687080, 458752, 3, 2621544, 458752, 3, 2556008, 458752, 3, 2490472, 458752, 3, 2424936, 458752, 3, 2359400, 458752, 3, 2293864, 458752, 3, 2228328, 458752, 3, 2162792, 458752, 3, 2097256, 458752, 3, 2031720, 458752, 3, 1966184, 458752, 3, 1900648, 458752, 3, 1835112, 458752, 3, 1769576, 458752, 3, 1704040, 458752, 3, 1638504, 458752, 3, 1572968, 458752, 3, 1507432, 458752, 3, 1441896, 458752, 3, 1376360, 458752, 3, 1310824, 458752, 3, 1245288, 458752, 3, 1179752, 458752, 3, 1114216, 458752, 3, 1048680, 458752, 3, 983144, 458752, 3, 917608, 458752, 3, 852072, 458752, 3, 786536, 458752, 3, 721000, 458752, 3, 655464, 458752, 3, 589928, 458752, 3, 524392, 458752, 3, 458856, 458752, 3, 393320, 458752, 3, 327784, 458752, 3, 262248, 458752, 3, 196712, 458752, 3, 131176, 458752, 3, 65640, 458752, 3, 104, 458752, 3, -65432, 458752, 3, -130968, 458752, 3, -196504, 458752, 3, -262040, 458752, 3, -327576, 458752, 3, -393112, 458752, 3, -458648, 458752, 3, -524184, 458752, 3, -589720, 458752, 3, -655256, 458752, 3, -720792, 458752, 3, -786328, 458752, 3, -851864, 458752, 3, -917400, 458752, 3, -982936, 458752, 3, -1048472, 196608, 2, 4128871, 458752, 2, -1048473, 458752, 2, 4128870, 458752, 2, -1048474, 458752, 2, 4128869, 458752, 2, -1048475, 458752, 2, 4128868, 458752, 2, -1048476, 458752, 2, 4128867, 458752, 2, -1048477, 458752, 2, 4128866, 458752, 2, -1048478, 458752, 2, 4128865, 458752, 2, -1048479, 458752, 2, 4128864, 458752, 2, -1048480, 458752, 2, 4128863, 458752, 2, -1048481, 458752, 2, 4128862, 458752, 2, -1048482, 458752, 2, 4128861, 458752, 2, -1048483, 458752, 2, 4128860, 458752, 2, -1048484, 458752, 2, 4128859, 458752, 2, -1048485, 458752, 2, 4128858, 458752, 2, -1048486, 458752, 2, 4128857, 458752, 2, -1048487, 458752, 2, 4128856, 458752, 2, -1048488, 458752, 2, 4128855, 458752, 2, -1048489, 458752, 2, 4128854, 458752, 2, -1048490, 458752, 2, 4128853, 458752, 2, -1048491, 458752, 2, 4128852, 458752, 2, -1048492, 458752, 2, 4128851, 458752, 2, -1048493, 458752, 2, 4128850, 458752, 2, -1048494, 458752, 2, 4128849, 458752, 2, -1048495, 458752, 2, 4128848, 458752, 2, -1048496, 458752, 2, 4128847, 458752, 2, -1048497, 458752, 2, 4128846, 458752, 2, -1048498, 458752, 2, 4128845, 458752, 2, -1048499, 458752, 2, 4128844, 458752, 2, -1048500, 458752, 2, 4128843, 458752, 2, -1048501, 458752, 2, 4128842, 458752, 2, -1048502, 458752, 2, 4128841, 458752, 2, -1048503, 458752, 2, 4128840, 458752, 2, -1048504, 458752, 2, 4128839, 458752, 2, -1048505, 458752, 2, 4128838, 458752, 2, -1048506, 458752, 2, 4128837, 458752, 2, -1048507, 458752, 2, 4128836, 458752, 2, -1048508, 458752, 2, 4128835, 458752, 2, -1048509, 458752, 2, 4128834, 458752, 2, -1048510, 458752, 2, 4128833, 458752, 2, -1048511, 458752, 2, 4128832, 458752, 2, -1048512, 458752, 2, 4128831, 458752, 2, -1048513, 458752, 2, 4128830, 458752, 2, -1048514, 458752, 2, 4128829, 458752, 2, -1048515, 458752, 2, 4128828, 458752, 2, -1048516, 458752, 2, 4128827, 458752, 2, -1048517, 458752, 2, 4128826, 458752, 2, -1048518, 458752, 2, 4128825, 458752, 2, -1048519, 458752, 2, 4128824, 458752, 2, -1048520, 458752, 2, 4128823, 458752, 2, -1048521, 458752, 2, 4128822, 458752, 2, -1048522, 458752, 2, 4128821, 458752, 2, -1048523, 458752, 2, 4128820, 458752, 2, -1048524, 458752, 2, 4128819, 458752, 2, -1048525, 458752, 2, 4128818, 458752, 2, -1048526, 458752, 2, 4128817, 458752, 2, -1048527, 458752, 2, 4128816, 458752, 2, -1048528, 458752, 2, 4128815, 458752, 2, -1048529, 458752, 2, 4128814, 458752, 2, -1048530, 458752, 2, 4128813, 458752, 2, -1048531, 458752, 2, 4128812, 458752, 2, -1048532, 458752, 2, 4128811, 458752, 2, -1048533, 458752, 2, 4128810, 458752, 2, -1048534, 458752, 2, 4128809, 458752, 2, -1048535, 458752, 2, 4128808, 458752, 2, -1048536, 458752, 2, 4128807, 458752, 2, -1048537, 458752, 2, 4128806, 458752, 2, -1048538, 458752, 2, 4128805, 458752, 2, -1048539, 458752, 2, 4128804, 458752, 2, -1048540, 458752, 2, 4128803, 458752, 2, -1048541, 458752, 2, 4128802, 458752, 2, -1048542, 458752, 2, 4128801, 458752, 2, -1048543, 458752, 2, 4128800, 458752, 2, -1048544, 458752, 2, 4128799, 458752, 2, -1048545, 458752, 2, 4128798, 458752, 2, -1048546, 458752, 2, 4128797, 458752, 2, -1048547, 458752, 2, 4128796, 458752, 2, -1048548, 458752, 2, 4128795, 458752, 2, -1048549, 458752, 2, 4128794, 458752, 2, -1048550, 458752, 2, 4128793, 458752, 2, -1048551, 458752, 2, 4128792, 458752, 2, -1048552, 458752, 2, 4128791, 458752, 2, -1048553, 458752, 2, 4128790, 458752, 2, -1048554, 458752, 2, 4128789, 458752, 2, -1048555, 458752, 2, 4128788, 458752, 2, -1048556, 458752, 2, 4128787, 458752, 2, -1048557, 458752, 2, 4128786, 458752, 2, -1048558, 458752, 2, 4128785, 458752, 2, -1048559, 458752, 2, 4128784, 458752, 2, -1048560, 458752, 2, 4128783, 458752, 2, -1048561, 458752, 2, 4128782, 458752, 2, -1048562, 458752, 2, 4128781, 458752, 2, -1048563, 458752, 2, 4128780, 458752, 2, -1048564, 458752, 2, 4128779, 458752, 2, -1048565, 458752, 2, 4128778, 458752, 2, -1048566, 458752, 2, 4128777, 458752, 2, -1048567, 458752, 2, 4128776, 458752, 2, -1048568, 458752, 2, 4128775, 458752, 2, -1048569, 458752, 2, 4128774, 458752, 2, -1048570, 458752, 2, 4128773, 458752, 2, -1048571, 458752, 2, 4128772, 458752, 2, -1048572, 458752, 2, 4128771, 458752, 2, -1048573, 458752, 2, 4128770, 458752, 2, -1048574, 458752, 2, 4128769, 458752, 2, -1048575, 458752, 2, 4128768, 458752, 2, -1048576, 458752, 2, 4194303, 458752, 2, -983041, 458752, 2, 4194302, 458752, 2, -983042, 458752, 2, 4194301, 458752, 2, -983043, 458752, 2, 4194300, 458752, 2, -983044, 458752, 2, 4194299, 458752, 2, -983045, 458752, 2, 4194298, 458752, 2, -983046, 458752, 2, 4194297, 458752, 2, -983047, 458752, 2, 4194296, 458752, 2, -983048, 458752, 2, 4194295, 458752, 2, -983049, 458752, 2, 4194294, 458752, 2, -983050, 458752, 2, 4194293, 458752, 2, -983051, 458752, 2, 4194292, 458752, 2, -983052, 458752, 2, 4194291, 458752, 2, -983053, 458752, 2, 4194290, 458752, 2, -983054, 458752, 2, 4194289, 458752, 2, -983055, 458752, 2, 4194288, 458752, 2, -983056, 458752, 2, 4194287, 458752, 2, -983057, 458752, 2, 4194286, 458752, 2, -983058, 458752, 2, 4194285, 458752, 2, -983059, 458752, 2, 4194284, 131072, 3, 4128748, 458752, 3, 4063212, 458752, 3, 3997676, 458752, 3, 3932140, 458752, 3, 3866604, 458752, 3, 3801068, 458752, 3, 3735532, 458752, 3, 3669996, 458752, 3, 3604460, 458752, 3, 3538924, 458752, 3, 3473388, 458752, 3, 3407852, 458752, 3, 3342316, 458752, 3, 3276780, 458752, 3, 3211244, 458752, 3, 3145708, 458752, 3, 3080172, 458752, 3, 3014636, 458752, 3, 2949100, 458752, 3, 2883564, 458752, 3, 2818028, 458752, 3, 2752492, 458752, 3, 2686956, 458752, 3, 2621420, 458752, 3, 2555884, 458752, 3, 2490348, 458752, 3, 2424812, 458752, 3, 2359276, 458752, 3, 2293740, 458752, 3, 2228204, 458752, 3, 2162668, 458752, 3, 2097132, 458752, 3, 2031596, 458752, 3, 1966060, 458752, 3, 1900524, 458752, 3, 1834988, 458752, 3, 1769452, 458752, 3, 1703916, 458752, 3, 1638380, 458752, 3, 1572844, 458752, 3, 1507308, 458752, 3, 1441772, 458752, 3, 1376236, 458752, 3, 1310700, 458752, 3, 1245164, 458752, 3, 1179628, 458752, 3, 1114092, 458752, 3, 1048556, 458752, 3, 983020, 458752, 3, 917484, 458752, 3, 851948, 458752, 3, 786412, 458752, 3, 720876, 458752, 3, 655340, 458752, 3, 589804, 458752, 3, 524268, 458752, 3, 458732, 458752, 3, 393196, 458752, 3, 327660, 458752, 3, 262124, 458752, 3, 196588, 458752, 3, 131052, 458752, 3, 65516, 458752, 3, -20, 458752, 3, -65556, 458752, 3, -131092, 458752, 3, -196628, 458752, 3, -262164, 458752, 3, -327700, 458752, 3, -393236, 458752, 3, -458772, 458752, 3, -524308, 458752, 3, -589844, 458752, 3, -655380, 458752, 3, -720916, 458752, 3, -786452, 458752, 3, -851988, 458752, 3, -917524, 458752, 3, -983060, 131072, 2)

[node name="Minerals" type="TileMap" parent="World"]
position = Vector2(0, 1024)
tile_set = ExtResource("1")
format = 2

[node name="Lava" type="TileMap" parent="World"]
position = Vector2(0, 1024)
tile_set = SubResource("10")
format = 2

[node name="Store" parent="World" instance=ExtResource("20")]
position = Vector2(6400, 2304)
scale = Vector2(2, 2)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15")
autoplay = true

[node name="Player" parent="." instance=ExtResource("17")]
position = Vector2(1824, 672)

[connection signal="generate_tileset" from="Overlay" to="." method="_on_Overlay_generate_tileset"]
[connection signal="world_load_complete" from="World" to="." method="_on_World_load_complete"]
[connection signal="world_load_progress" from="World" to="." method="_on_World_world_load_progress"]
[connection signal="player_entered" from="World/Store" to="." method="_on_Store_player_entered"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="dig_down" from="Player" to="." method="_on_Player_dig_down"]
[connection signal="dig_left" from="Player" to="." method="_on_Player_dig_left"]
[connection signal="dig_right" from="Player" to="." method="_on_Player_dig_right"]
[connection signal="dynamite" from="Player" to="." method="_on_Player_dynamite"]
